# rhizo-hello-world

./: Cargo.toml  README.md  api.toml
src/: main.rs  onchain_read.rs
