[package]
name = "helloworld-rhizo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rhizo-sdk = "0.1.4"
reqwest = { git = "https://github.com/wasix-org/reqwest.git", default-features = false, features = [
    "json",
    "blocking",
] }

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" } 
libc = { git = "https://github.com/wasix-org/libc.git" } 
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" } 
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }
