[package]
name = "helloworld-rhizo"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
lto = "fat"

[dependencies]
rhizo-sdk = {path="../rhizo-sdk"}
reqwest = { git = "https://github.com/wasix-org/reqwest.git", default-features = false}
tokio = {git = "https://github.com/wasix-org/tokio.git", branch = "epoll", features=["rt-multi-thread"] }
rhizo-types = "0.1.9"
serde_json = "1.0.108"
borsh = "0.10.3"
b64 = "0.4.0"

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.4.9" } 
libc = { git = "https://github.com/wasix-org/libc.git" } 
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "epoll" } 
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.27" }
                
